--- a/shopweb/web/templates/common.html
+++ b/shopweb/web/templates/common.html
@@ -53,7 +53,10 @@
 
             <div class="head_links">
               <ul>
+                <li><a href="/aboutus" data-loc="about.us"></a></li>
+                <li><a href="http://ididhandmade.blogspot.ro/">Blog</a></li>
                 <li><a href="/" data-loc="main.page"></a></li>
+                <li><a href="/onsale" data-loc="onsale"></a></li>
               </ul>
             </div>
 
