--- a/shopweb/web/static/css/style.css
+++ b/shopweb/web/static/css/style.css
@@ -211,6 +211,14 @@ a:active {
 	top: 30px;
 	float: left;
 	position: relative;
+	background-color: #fff;
+	height: 40px;
+	padding: 10px 0 10px 20px;
+	border-radius: 15px 15px 0px 0px;
+}
+
+.head_links ul li {
+	margin-right: 20px;
 }
 
 .head_links * {
@@ -1358,19 +1366,18 @@ h1 {
 }
 
 .unique_label {
-	width: 200px;
-	background: #aaa;
+	width: 50px;
+	height: 50px;
+	background: #f00;
 	position: absolute;
 	text-align: center;
-	line-height: 40px;
-	letter-spacing: 1px;
 	color: #fff;
 	top: 15px;
-	right: -60px;
+	padding-top: 13px;
+	right: 10px;
 	left: auto;
-	transform: rotate(45deg);
-	-webkit-transform: rotate(45deg);
-	font-size: 20px;
+	font-size: 16px;
+	border-radius: 40px;
 }
 
 .order_edit_status {
