--- a/shopweb/web/templates/common.html
+++ b/shopweb/web/templates/common.html
@@ -56,7 +56,7 @@
                 <li><a href="/aboutus" data-loc="about.us"></a></li>
                 <li><a href="http://ididhandmade.blogspot.ro/">Blog</a></li>
                 <li><a href="/" data-loc="main.page"></a></li>
-                <li><a href="/onsale" data-loc="onsale"></a></li>
+                <li><a href="/products?search=:onsale" data-loc="onsale"></a></li>
               </ul>
             </div>
 
