--- a/shopweb/web/templates/common.html
+++ b/shopweb/web/templates/common.html
@@ -3,7 +3,6 @@
 
 <meta name="keywords" content="handmade, manual, bijuterii, jucarii, tablouri, vase ceramice si sticla, ceasuri, genti, perne etc." />
 
-<link href='http://fonts.googleapis.com/css?family=Dosis:400,300,700&amp;subset=latin,latin-ext' rel='stylesheet' type='text/css' />
 <link href="/static/css/style.css" rel="stylesheet" type="text/css" />
 <link href="/static/css/sprite.css" rel="stylesheet" type="text/css" />
 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
@@ -53,10 +52,10 @@
 
             <div class="head_links">
               <ul>
-                <li><a href="/aboutus" data-loc="about.us"></a></li>
-                <li><a href="http://ididhandmade.blogspot.ro/">Blog</a></li>
-                <li><a href="/" data-loc="main.page"></a></li>
-                <li><a href="/products?search=:onsale" data-loc="onsale"></a></li>
+                <li><a href="/aboutus"><div data-loc="about.us"></div></a></li>
+                <li><a href="/"><div data-loc="main.page"></div></a></li>
+                <li><a href="/products?search=:onsale"><div data-loc="onsale"></div></a></li>
+                <li><a href="http://ididhandmade.blogspot.ro/"><div>Blog</div></a></li>
               </ul>
             </div>
 
