--- a/shopweb/web/templates/mobile/common.html
+++ b/shopweb/web/templates/mobile/common.html
@@ -1,7 +1,8 @@
 <html>
 <head>
 
-<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"/>
+<meta name="viewport"
+	content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
 <meta name="keywords"
 	content="handmade, manual, bijuterii, jucarii, tablouri, vase ceramice si sticla, ceasuri, genti, perne etc." />
 
@@ -39,12 +40,18 @@
 	<div class="fb-root"></div>
 	<div class="header">
 		<div id="logo">
-			<a href="/">
+			<a href="/mobile">
 				<div id="logo_img"></div>
 			</a>
 		</div>
 	</div>
 	<div class="fb_area"></div>
+	<div class="search">
+		<div class="box">
+			<div class="pic"></div>
+			<input id="text" type="text" />
+		</div>
+	</div>
 	<div id="content"></div>
 </body>
 </html>
