--- a/shopweb/web/static/mobile/css/style.css
+++ b/shopweb/web/static/mobile/css/style.css
@@ -5,6 +5,8 @@ html, body {
 	left: 0px;
 	line-height: 1.5em;
 	height: 100%;
+	white-space: nowrap;
+	overflow-x: hidden;
 }
 
 * {
@@ -12,7 +14,7 @@ html, body {
 	margin: 0;
 	font-family: sans-serif;
 	font-weight: 300;
-	font-size: 24pt;
+	font-size: 16pt;
 }
 
 *, *:before, *:after {
@@ -23,7 +25,7 @@ html, body {
 
 a {
 	text-decoration: none;
-	 -webkit-tap-highlight-color: rgba(0,0,0,0);
+	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 a:link {
@@ -44,6 +46,10 @@ ul {
 }
 
 li {
+	float: left;
+}
+
+.left {
 	float: left;
 }
 
@@ -70,7 +76,7 @@ li {
 	height: 126px;
 }
 
-#content, .categories {
+#content, .categories, .products {
 	width: 100%;
 	position: relative;
 }
@@ -79,11 +85,11 @@ li {
 	height: 100%;
 }
 
-.categories {
+.categories, .products {
 	top: 20px;
 }
 
-.categories ul {
+.categories ul, .products ul {
 	width: 100%;
 }
 
@@ -111,7 +117,8 @@ li {
 	margin: auto;
 	display: block;
 	position: relative;
-	margin-top: 10px;
+	margin-top: 20px;
+	font-size: 18pt;
 }
 
 .cat_card {
@@ -131,7 +138,7 @@ li {
 	height: 100%;
 	border-radius: 20px;
 	border: 1px solid #333;
-	height: 90px;
+	height: 100%;
 	padding: 10px;
 	background: #ddd;
 }
@@ -139,16 +146,47 @@ li {
 .search .box .pic {
 	background-image: url("/static/images/search.png");
 	background-repeat: no-repeat;
-	height: 64px;
-	width: 64px;
+	height: 32px;
+	width: 32px;
 	float: left;
+	margin-top: 5px;
 }
 
 .search .box #text {
-	height: 100%;
+	height: 40px;
 	border: none;
 	width: 70%;
 	margin-left: 10px;
 	background: #ddd;
 	width: 70%;
+}
+
+.products ul li {
+	width: 100%;
+	height: 120px;
+	border-bottom: 1px solid #ddd;
+}
+
+#prod_pic {
+	width: 100px;
+	height: 114px;
+	margin-top: 5px;
+	display: inline-block;
+}
+
+.prod_content {
+	display: inline-block;
+	position: relative;
+	bottom: 35px;
+}
+
+#prod_price {
+	margin-left: 10px;
+	font-size: 16pt;
+}
+
+#prod_title {
+	font-size: 14pt;
+	margin-left: 10px;
+	overflow: hidden;
 }
