--- a/shopweb/web/static/css/style.css
+++ b/shopweb/web/static/css/style.css
@@ -404,7 +404,7 @@ a:active {
 	position: relative;
 	box-shadow: inset 0px 0px 1px 1px #ddd;
 	overflow: hidden;
-	margin: 20px 20px 20px 20px;
+	margin: 10px;
 }
 
 .item_box:hover {
@@ -876,22 +876,6 @@ h1 {
 	float: left;
 }
 
-#presentation {
-	height: 160px;
-	overflow: hidden;
-	width: 100%;
-	float: left;
-}
-
-#presentation ul {
-	width: 20000px;
-}
-
-#presentation ul li {
-	float: left;
-	margin: 10px 5px 20px 10px;
-}
-
 .active img {
 	border: 1px solid #dddddd !important;
 }
@@ -920,10 +904,10 @@ h1 {
 	height: 100%;
 	display: inline-block;
 	position: relative;
-	box-shadow: 0px 0px 10px 1px #999;
 	border-radius: 10px;
 	padding: 10px;
 	background-color: #ffffff;
+	width: 100%;
 }
 
 .product_content_simple {
@@ -936,8 +920,7 @@ h1 {
 
 
 .product_detail_border {
-	display: inline-block;
-	padding: 10px;
+	display: none;
 }
 
 .sort {
