--- a/shopweb/web/templates/productslist.html
+++ b/shopweb/web/templates/productslist.html
@@ -1,24 +1,27 @@
 <ul>
-  <li data-permissions="write">
-    <div class="item_box add_item">
-       <div class="sprite sprite-add-item"></div>
-    </div>
-  </li>
-  <li data-snip="item">
-    <div class="item_box">
-      <div class="edit_tag">
-         <div class="edit_tag_close" data-permissions="write">
-            <span class="sprite sprite-close" />
-         </div>
-      </div>
-      <div id="unique_ribbon" class="unique_label" data-loc="unique"></div>
-      <div class="info_tag">
-        <div class="info_tag_text"></div>
-        <div class="info_tag_cart">
-          <span class="sprite sprite-cart_black" />
-        </div>
-        <div class="info_tag_price"></div>
-      </div>
-    </div>
-  </li>
+	<li data-permissions="write">
+		<div class="item_box add_item">
+			<div class="sprite sprite-add-item"></div>
+		</div>
+	</li>
+	<li data-snip="item">
+		<div class="item_box">
+			<div class="edit_tag">
+				<div class="edit_tag_close" data-permissions="write">
+					<span class="sprite sprite-close" />
+				</div>
+			</div>
+			<div id="unique_ribbon" class="unique_label" data-loc="unique"></div>
+			<div class="info_tag">
+				<div class="info_tag_text"></div>
+				<div class="info_tag_cart">
+					<div class="btn">
+						<span class="sprite sprite-cart_black"></span>
+						<span data-loc="add.to.cart"></span>
+					</div>
+				</div>
+				<div class="info_tag_price"></div>
+			</div>
+		</div>
+	</li>
 </ul>
