--- a/shopweb/web/templates/productdetailview.html
+++ b/shopweb/web/templates/productdetailview.html
@@ -88,7 +88,7 @@
 							</ul>
 						</div>
 
-						<div class="left20 btn" id="save_product">
+						<div class="btn" id="save_product">
 							<a href="#" data-loc="save"></a>
 						</div>
 
