--- a/shopweb/web/templates/mobile/common.html
+++ b/shopweb/web/templates/mobile/common.html
@@ -66,7 +66,7 @@
 	<div class="fb_area"></div>
 	<div class="tools">
 		<div class="box">
-			<div class="icon" data-snip="back">
+			<div class="icon back" data-snip="back">
 				<img src="/static/mobile/images/arrows.png" />
 			</div>
 			<div class="icon" id="search">
