--- a/shopweb/web/templates/order_ro.html
+++ b/shopweb/web/templates/order_ro.html
@@ -90,76 +90,78 @@ table tr th {
 </head>
 
 <body>
-  <div class="center">
-    <div>
-      <img data-snip="logo" /> <br />
-      <h3 data-loc="thank.you"></h3>
-    </div>
-    <div class="order_info">
-      <table style="width: 400px" data-snip="info">
-        <tr>
-          <td align="left"><span id="field" data-loc="order.id"></span></td>
-          <td align="left"><span id="oid"></span></td>
-        </tr>
-        <tr>
-          <td align="left"><span data-loc="last.name"></span></td>
-          <td align="left"><span id="lname"></span></td>
-        </tr>
-        <tr>
-          <td align="left"><span data-loc="first.name"></span></td>
-          <td align="left"><span id="fname"></span></td>
-        </tr>
-        <tr>
-          <td align="left"><span data-loc="region"></span></td>
-          <td align="left"><span id="region"></span></td>
-        </tr>
-        <tr>
-          <td align="left"><span data-loc="city"></span></td>
-          <td align="left"><span id="city"></span></td>
-        </tr>
-        <tr>
-          <td align="left"><span data-loc="address"></span></td>
-          <td align="left"><span id="address"></span></td>
-        </tr>
-        <tr>
-          <td align="left"><span data-loc="email"></span></td>
-          <td align="left"><span id="email"></span></td>
-        </tr>
-        <tr>
-          <td align="left"><span data-loc="phone"></span></td>
-          <td align="left"><span id="phone"></span></td>
-        </tr>
+	<div class="center">
+		<div>
+			<img data-snip="logo" /> <br />
+			<h3 data-loc="thank.you"></h3>
+		</div>
+		<div class="order_info">
+			<table style="width: 400px" data-snip="info">
+				<tr>
+					<td align="left"><span id="field" data-loc="order.id"></span></td>
+					<td align="left"><span id="oid"></span></td>
+				</tr>
+				<tr>
+					<td align="left"><span data-loc="last.name"></span></td>
+					<td align="left"><span id="lname"></span></td>
+				</tr>
+				<tr>
+					<td align="left"><span data-loc="first.name"></span></td>
+					<td align="left"><span id="fname"></span></td>
+				</tr>
+				<tr>
+					<td align="left"><span data-loc="region"></span></td>
+					<td align="left"><span id="region"></span></td>
+				</tr>
+				<tr>
+					<td align="left"><span data-loc="city"></span></td>
+					<td align="left"><span id="city"></span></td>
+				</tr>
+				<tr>
+					<td align="left"><span data-loc="address"></span></td>
+					<td align="left"><span id="address"></span></td>
+				</tr>
+				<tr>
+					<td align="left"><span data-loc="email"></span></td>
+					<td align="left"><span id="email"></span></td>
+				</tr>
+				<tr>
+					<td align="left"><span data-loc="phone"></span></td>
+					<td align="left"><span id="phone"></span></td>
+				</tr>
 
-      </table>
-    </div>
-    <br />
-    <div class="items">
-      <table>
-        <tr>
-          <th data-loc="product"></th>
-          <th data-loc="title"></th>
-          <th data-loc="quantity"></th>
-          <th data-loc="unit.price"></th>
-          <th data-loc="customize"></th>
-        </tr>
-        <tr data-snip="content">
-          <td align="center"><img width="50" height="57" /></td>
-          <td align="center" class="c1"></td>
-          <td align="center" class="c2"></td>
-          <td align="center" class="c3"></td>
-          <td align="center" class="c4" id="opts"></td>
-        </tr>
-      </table>
-      <div class="total">
-        <h3>
-          Total <span data-snip="total"></span> Lei
-        </h3>
-      </div>
-    </div>
-  </div>
-  <div>
-    <span>Toate preturile includ TVA. Plata se va efectua la livrare.</span> <br /> <span>Pentru informatii suplimentare contactati-ne pe</span> <span><a
-      href="mailto:office@idid.ro">office@idid.ro</a></span>
-  </div>
+			</table>
+		</div>
+		<br />
+		<div class="items">
+			<table>
+				<tr>
+					<th data-loc="product"></th>
+					<th data-loc="title"></th>
+					<th data-loc="quantity"></th>
+					<th data-loc="unit.price"></th>
+				</tr>
+				<tr data-snip="content">
+					<td align="center"><img width="50" height="57" /></td>
+					<td align="center" class="c1"></td>
+					<td align="center" class="c2"></td>
+					<td align="center" class="c3"></td>
+				</tr>
+			</table>
+			<div class="transport">
+				<span data-snip="transport"> </span>
+			</div>
+			<div class="total">
+				<h3>
+					Total <span data-snip="total"></span> Lei
+				</h3>
+			</div>
+		</div>
+	</div>
+	<div>
+		<span>Toate preturile includ TVA. Plata se va efectua la
+			livrare.</span> <br /> <span>Pentru informatii suplimentare
+			contactati-ne pe</span> <span><a href="mailto:office@idid.ro">office@idid.ro</a></span>
+	</div>
 </body>
 </html>
