--- a/shopweb/web/templates/order_company_ro.html
+++ b/shopweb/web/templates/order_company_ro.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <style>
-html,body {
+html, body {
 	top: 0px;
 	right: 0px;
 	bottom: 0px;
@@ -86,87 +86,92 @@ table tr th {
 </head>
 
 <body>
-  <div class="center">
-    <div>
-      <img data-snip="logo" /> <br />
-      <h3 data-loc="thank.you"></h3>
-    </div>
-    <div class="order_info">
-      <table style="width: 400px" data-snip="info">
-        <tr>
-          <td align="left"><span id="field" data-loc="order.id"></span></td>
-          <td align="left"><span id="oid"></span></td>
-        </tr>
-        <tr>
-          <td align="left"><span data-loc="company.name"></span></td>
-          <td align="left"><span id="cname"></span></td>
-        </tr>
-        <tr>
-          <td align="left"><span data-loc="company.cif"></span></td>
-          <td align="left"><span id="cif"></span></td>
-        </tr>
-        <tr>
-          <td align="left"><span data-loc="company.reg.com"></span></td>
-          <td align="left"><span id="cregcom"></span></td>
-        </tr>
-        <tr>
-          <td align="left"><span data-loc="company.bank"></span></td>
-          <td align="left"><span id="cbank"></span></td>
-        </tr>
-        <tr>
-          <td align="left"><span data-loc="company.bank.account"></span></td>
-          <td align="left"><span id="cbankaccount"></span></td>
-        </tr>
-        <tr>
-          <td align="left"><span data-loc="region"></span></td>
-          <td align="left"><span id="cregion"></span></td>
-        </tr>
-        <tr>
-          <td align="left"><span data-loc="city"></span></td>
-          <td align="left"><span id="ccity"></span></td>
-        </tr>
-        <tr>
-          <td align="left"><span data-loc="address"></span></td>
-          <td align="left"><span id="caddress"></span></td>
-        </tr>
-        <tr>
-          <td align="left"><span data-loc="email"></span></td>
-          <td align="left"><span id="cemail"></span></td>
-        </tr>
-        <tr>
-          <td align="left"><span data-loc="phone"></span></td>
-          <td align="left"><span id="cphone"></span></td>
-        </tr>
+	<div class="center">
+		<div>
+			<img data-snip="logo" /> <br />
+			<h3 data-loc="thank.you"></h3>
+		</div>
+		<div class="order_info">
+			<table style="width: 400px" data-snip="info">
+				<tr>
+					<td align="left"><span id="field" data-loc="order.id"></span></td>
+					<td align="left"><span id="oid"></span></td>
+				</tr>
+				<tr>
+					<td align="left"><span data-loc="company.name"></span></td>
+					<td align="left"><span id="cname"></span></td>
+				</tr>
+				<tr>
+					<td align="left"><span data-loc="company.cif"></span></td>
+					<td align="left"><span id="cif"></span></td>
+				</tr>
+				<tr>
+					<td align="left"><span data-loc="company.reg.com"></span></td>
+					<td align="left"><span id="cregcom"></span></td>
+				</tr>
+				<tr>
+					<td align="left"><span data-loc="company.bank"></span></td>
+					<td align="left"><span id="cbank"></span></td>
+				</tr>
+				<tr>
+					<td align="left"><span data-loc="company.bank.account"></span></td>
+					<td align="left"><span id="cbankaccount"></span></td>
+				</tr>
+				<tr>
+					<td align="left"><span data-loc="region"></span></td>
+					<td align="left"><span id="cregion"></span></td>
+				</tr>
+				<tr>
+					<td align="left"><span data-loc="city"></span></td>
+					<td align="left"><span id="ccity"></span></td>
+				</tr>
+				<tr>
+					<td align="left"><span data-loc="address"></span></td>
+					<td align="left"><span id="caddress"></span></td>
+				</tr>
+				<tr>
+					<td align="left"><span data-loc="email"></span></td>
+					<td align="left"><span id="cemail"></span></td>
+				</tr>
+				<tr>
+					<td align="left"><span data-loc="phone"></span></td>
+					<td align="left"><span id="cphone"></span></td>
+				</tr>
 
 
-      </table>
-    </div>
-    <br />
-    <div class="items">
-      <table>
-        <tr>
-          <th data-loc="product"></th>
-          <th data-loc="title"></th>
-          <th data-loc="quantity"></th>
-          <th data-loc="unit.price"></th>
-        </tr>
-        <tr data-snip="content">
-          <td align="center"><img width="50" height="57" /></td>
-          <td align="center" class="c1"></td>
-          <td align="center" class="c2"></td>
-          <td align="center" class="c3"></td>
-        </tr>
-      </table>
-      <div class="total">
-        <h3>
-          Total <span data-snip="total"></span> Lei
-        </h3>
-      </div>
-    </div>
-  </div>
-  <div>
-    <span>Toate preturile includ TVA. Plata se va efectua la livrare.</span> <br /> <span>Pentru informatii suplimentare
-      contactati-ne pe</span> <span><a href="mailto:office@idid.ro">office@idid.ro</a></span>
-  </div>
+			</table>
+		</div>
+		<br />
+		<div class="items">
+			<table>
+				<tr>
+					<th data-loc="product"></th>
+					<th data-loc="title"></th>
+					<th data-loc="quantity"></th>
+					<th data-loc="unit.price"></th>
+				</tr>
+				<tr data-snip="content">
+					<td align="center"><img width="50" height="57" /></td>
+					<td align="center" class="c1"></td>
+					<td align="center" class="c2"></td>
+					<td align="center" class="c3"></td>
+				</tr>
+			</table>
+			<div class="transport">
+				<span data-snip="transport"> </span>
+			</div>
+
+			<div class="total">
+				<h3>
+					Total <span data-snip="total"></span> Lei
+				</h3>
+			</div>
+		</div>
+	</div>
+	<div>
+		<span>Toate preturile includ TVA. Plata se va efectua la
+			livrare.</span> <br /> <span>Pentru informatii suplimentare
+			contactati-ne pe</span> <span><a href="mailto:office@idid.ro">office@idid.ro</a></span>
+	</div>
 </body>
 </html>
