--- a/shopweb/web/templates/productdetailview.html
+++ b/shopweb/web/templates/productdetailview.html
@@ -135,8 +135,8 @@
 									class="left clickable sprite sprite-plus"></div>
 								<div class="specs_title left10" data-loc="add.specs"></div>
 							</div>
-							<div id="edit_prop_fields" class="row">
-								<div class="edit_props_sample">
+							<div id="edit_prop_fields" >
+								<div class="row">
 									<input type='text' name='pkey' /> <input type='text'
 										name='pval' />
 									<div class='clickable sprite sprite-minus top5 left left10'></div>
