--- a/shopweb/web/static/css/style.css
+++ b/shopweb/web/static/css/style.css
@@ -899,7 +899,7 @@ h1 {
 }
 
 .product_content_simple {
-	height: 100%;
+	width: 100%;
 	display: inline-block;
 	position: relative;
 	padding: 10px;
@@ -1148,6 +1148,7 @@ h1 {
 	top: 20px;
 	width: 100%;
 	float: left;
+	clear: both;
 }
 
 .horiz_right {
@@ -1413,4 +1414,9 @@ h1 {
 
 #save_product {
 	float: right;
+}
+
+.transport {
+	width: 100%;
+	height: 100%;
 }
