--- a/shopweb/web/templates/mobile/common.html
+++ b/shopweb/web/templates/mobile/common.html
@@ -46,8 +46,6 @@
 				$('.search .box #text').focus();
 			});
 
-			
-			
 		})
 	})();
 </script>
@@ -80,6 +78,9 @@
 	<div class="search">
 		<input id="text" type="text" />
 	</div>
+	<div id="notice_e"></div>
+	<div id="notice_connect_e" data-snip="connect_error"></div>
+	<div id="notice_i"></div>
 
 	<div id="content"></div>
 </body>
