--- a/shopweb/web/templates/common.html
+++ b/shopweb/web/templates/common.html
@@ -350,6 +350,14 @@
 				</form>
 			</div>
 		</div>
+
+		<div id="confirm">
+			<span id="can_delete_product" data-loc="can_delete_product"></span> <span
+				id="can_delete_category" data-loc="can_delete_category"></span>
+			<div id="text" class="row"></div>
+			<div id="ok" class="btn" data-loc="ok"></div>
+			<div id="cancel" class="btn" data-loc="cancel"></div>
+		</div>
 		<div id="cart_footer">
 			<span id="total">0 Lei</span> <a id="buy_step1" href="#"
 				data-loc="buy_step1"></a> <a id="terms_link" href="/terms"
