--- a/shopweb/web/static/mobile/css/style.css
+++ b/shopweb/web/static/mobile/css/style.css
@@ -414,3 +414,19 @@ li {
 #login .row {
 	height: 60px;
 }
+
+.user_name {
+	float: left;
+	font-size: 16px;
+	margin-top: 5px;
+	color: green;
+}
+.logout {
+	float: right;
+}
+
+.logged_in {
+	width: 100%;
+	display: inline-block;	
+	padding: 5px;
+}
