--- a/shopweb/web/templates/mobile/common.html
+++ b/shopweb/web/templates/mobile/common.html
@@ -13,11 +13,12 @@
 
 <script type="text/javascript" src="/static/js/jquery-2.0.3.min.js"></script>
 <script type="text/javascript" src="/static/js/jquery.cookie.js"></script>
+<script type="text/javascript" src="/static/js/jquery.base64.min.js"></script>
 <script type="text/javascript" src="/static/js/purl.js"></script>
 <script type="text/javascript"
 	src="http://connect.facebook.net/ro_RO/all.js"></script>
 
-<script type="text/javascript" src="/static/mobile/js/cart.js"></script>
+<script type="text/javascript" src="/static/mobile/js/mobile.js"></script>
 
 <script>
 	(function(i, s, o, g, r, a, m) {
@@ -50,6 +51,12 @@
 				$('#login').toggle();
 			});
 			$('#auth').click(function(e) {
+				window.common.login('#login_form');
+				e.preventDefault();
+				false;
+			});
+			$('#logout').click(function(e) {
+				window.common.logout();
 				e.preventDefault();
 				false;
 			});
@@ -81,6 +88,10 @@
 				<img src="/static/mobile/images/user.png" />
 			</div>
 		</div>
+	</div>
+	<div data-snip="user" class="logged_in">
+	  <div class="user_name"></div>
+	  <div id="logout" class="btn logout" data-loc="logout"></div>
 	</div>
 	<div class="search">
 		<input id="text" type="text" placeholder="loc:search" />
